initialized webpack and made bundle with script and css files, started css

--- a/client/src/Assets/style/oldstyle.css
+++ b/client/src/Assets/style/oldstyle.css
@@ -4,8 +4,6 @@
     margin: 0;
 }
 
-@import 'bulma/css/bulma.css'
-
 /* Allows for smooth scrolling when links click */
 
 html {
@@ -24,7 +22,7 @@ body>a {
 
 /* Header box and title */
 
-header {
+nav {
     padding: 20px;
     width: 100%;
     justify-content: space-between;
@@ -87,7 +85,7 @@ p {
 .pagePhoto {
     padding-top: 50%;  
     margin-bottom: 25px;
-    background-image: url("./Images/pagePhoto.jpg");
+    background-image: url("../Images/pagePhoto.jpg");
     background-size: cover;
     background-position: center;
 }
