--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -8,22 +8,34 @@ html {
     height: 75px;
 }
 
-/* .navbar-dropdown a {
-    color: #3E8ED0;
-} */
-
 svg {
     width: 24px;
     height: 24px;
     color: #3E8ED0;
 }
 
-.box img {
+#work {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    margin: 20px;
+    width: 45%;
+}
+
+.workCard {
+    height: 150px;
+    width: 100%;
+    object-fit: cover;
+}
+
+/* .box img {
     padding: 0;
     width: 100%;
     height: 200px;
     object-fit: cover;
-}
+} */
 
 /* Button to return you to top of page anchor */
 .backToTop {
